Bug 480196 - FreeBSD: konsole: broken tabs/session title
Summary: FreeBSD: konsole: broken tabs/session title
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.90
Platform: FreeBSD Ports FreeBSD
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2024-01-22 22:55 UTC by Ole
Modified: 2024-03-12 01:21 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
broken tabs title (10.83 KB, image/png)
2024-01-22 22:55 UTC, Ole
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ole 2024-01-22 22:55:01 UTC
Created attachment 165143 [details]
broken tabs title

STEPS TO REPRODUCE
1.  run 'konsole'
2.  ssh XXX@remote host
3.  add second tabs
4. keep doing some activity and after a while you may see garbage (see screenshot) instead of the normal title.


OBSERVED RESULT

1) in a local session tabs I only see '/' , instead of the usual title  ( my settins: Tab title format: %d : %n )
2) in a remote session tabs I can see random garbage (buffer overflow ? ).  I once saw this as a tab name:
```
'/ : ze Name[it]=Brezza N'
```
(it looks like part of i18n content?  po/it/konsole.po:msgstr "Brezza" )

( behavior does not depend on the user shell ( /bin/sh, /bin/csh ))

Possibly a 'sysctl' processing/parsing problem in

  src/UnixProcessInfo.cpp ( UnixProcessInfo::getProcInfoStruct )
  src/ProcessInfo.cpp ( readProcInfo )

?

EXPECTED RESULT

Username/path/remote host info as a tabs title

SOFTWARE/OS VERSIONS

OS: FreeBSD 15.0-CURRENT
KDE Plasma Version: 5.92.0
KDE Framework Version: 5.248.0
Qt Version: 6.6.1
Kernel Version: 15.0-CURRENT (64-bin)
Graphics Platform: X11


ADDITIONAL INFORMATION

Tabs settings:

Tab title format: %d : %n
Remote tab title format: (%u) %H

konsole version: 24.01.90
Comment 1 Graham Perrin 2024-02-03 19:28:12 UTC
I have what might be the same underlying bug, without use of ssh. 

6.0 Beta 2 pictured at <https://forums.freebsd.org/threads/freebsd-screen-shots.8877/post-638020>, I had the same symptom when I tested RC1.
Comment 2 Bug Janitor Service 2024-03-11 22:14:52 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/konsole/-/merge_requests/964
Comment 3 Kurt Hindenburg 2024-03-12 01:21:45 UTC
Git commit 538336ca525289bf2f64cd07aad7265052112e94 by Kurt Hindenburg, on behalf of Luis Javier Merino Morán.
Committed on 12/03/2024 at 01:18.
Pushed by hindenburg into branch 'master'.

Fix getting FreeBSD process name

Looks like it was broken since 25f8ebf9b due to some copy/paste error.

M  +2    -2    src/ProcessInfo.cpp

https://invent.kde.org/utilities/konsole/-/commit/538336ca525289bf2f64cd07aad7265052112e94