Fix getting FreeBSD process name

Looks like it was broken since 25f8ebf9b due to some copy/paste error.

BUG: 480196
(cherry picked from commit 538336ca525289bf2f64cd07aad7265052112e94)